[package]
name = "caldera"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
caldera-macro = { path = "../caldera-macro" }
arrayvec = "0.7"
spark = { path = "../../spark/spark/" }
spark-imgui = { path = "../../spark/spark-imgui/" }
notify = "4.0"
winit = "0.24"
raw-window-handle = "0.3"
imgui = "0.7"
imgui-winit-support = "0.7"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
ultraviolet = { version = "0.8.1", features = ["int", "bytemuck"] }
bitvec = "0.22"
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }
 
[dev-dependencies]
ply-rs = "0.1.3"
pmj = { git = "https://github.com/sjb3d/pmj/" }
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.3"
nom = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stb = "0.3.2"
