[package]
name = "caldera"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
caldera-macro = { path = "../caldera-macro" }
arrayvec = "0.7"
spark = { git = "https://github.com/sjb3d/spark/" }
spark-imgui = { git = "https://github.com/sjb3d/spark/" }
notify = "4.0"
winit = "0.25"
raw-window-handle = "0.3"
imgui = "0.8"
imgui-winit-support = "0.8"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
ultraviolet = { version = "0.8.1", features = ["int", "bytemuck"] }
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }
slotmap = "1.0"
tokio = { version = "1.11.0", features = ["full"] }

[dev-dependencies]
ply-rs = "0.1.3"
pmj = { git = "https://github.com/sjb3d/pmj/" }
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.3"
nom = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitvec = "0.22"
stb = "0.3.2"
primes = "0.3.0"
