[package]
name = "caldera"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
caldera-macro = { path = "../caldera-macro" }
arrayvec = "0.7.2"
spark = { git = "https://github.com/sjb3d/spark/" }
spark-egui = { git = "https://github.com/sjb3d/spark/" }
notify = "4.0.17"
winit = "0.28"
raw-window-handle = "0.5"
egui = "0.23"
egui-winit = "0.23"
bytemuck = { version = "1.8.0", features = ["derive", "min_const_generics"] }
ultraviolet = { version = "0.9.0", features = ["int", "bytemuck"] }
structopt = "0.3.26"
strum = { version = "0.24.0", features = ["derive"] }
slotmap = "1.0.6"
tinyvec = "1.5.1"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
ply-rs = "0.1.3"
pmj = { git = "https://github.com/sjb3d/pmj/" }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.1"
nom = "7.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bitvec = "1.0.0"
stb = "0.3.2"
primes = "0.3.0"
