[package]
name = "mesh"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
caldera = { path = "../../caldera" }
spark = { path = "../../../spark/spark" }
bytemuck = { version = "1.5", features = ["derive"] }
winit = "0.24"
imgui = "0.6.1"
ply-rs = "0.1.3"
structopt = "0.3"
