[package]
name = "trace"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
caldera = { path = "../../caldera" }
spark = { path = "../../../spark/spark" }
bytemuck = { version = "1.5", features = ["derive"] }
winit = "0.24"
imgui = "0.6.1"
pmj = { path = "../../../pmj/pmj" }
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.3"
nom = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stb = "0.3.2"
