[package]
name = "trace"
version = "0.1.0"
authors = ["Simon Brown <si@sjbrown.co.uk>"]
edition = "2018"
publish = false

[dependencies]
caldera = { path = "../../caldera" }
spark = { path = "../../../spark/spark/" }
bytemuck = { version = "1.7", features = ["derive"] }
winit = "0.24"
imgui = "0.7"
pmj = { git = "https://github.com/sjb3d/pmj/" }
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.3"
nom = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stb = "0.3.2"
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }
ply-rs = "0.1.3"
